# mcp-connector

./: .gitignore  README.md  env.txt  launcher.py  pyproject.toml  start-all.ps1
.github/agents/: BDI-Prompt-Judge-Bundle.md  BDI-Prompt.md  Judge.agent-DoD.md  Judge.agent-without-DoD.md
docs/diagrams/: BDI.md  Tool Calling Bsp.txt  agent-vs-manuell_1.drawio  architecture.md  bpmn.xml  deployment.md  interaction-diagram.md
mcp-ado/: README.md  __init__.py  config.example.json  mcp_server.py
mcp-docupedia/: README.md  __init__.py  config.example.json  mcp_server.py
mcp-gateway/: README.md  fastmcp.json  gateway_config.json  gateway_server.py  ui.py
